objects/DictionaryItem__c.object
<CustomObject>
    <fields>
        <fullName>APIName__c</fullName>
        <description>The API Name of the component</description>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessDefinition__c</fullName>
        <description>The definition of the component that is published to users</description>
        <inlineHelpText>The definition of the component that is published to users</inlineHelpText>
        <label>Business Definition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BusinessOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business owner of the component</description>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DictionaryBusinessOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ByteLength__c</fullName>
        <description>For variable-length fields (including binary fields), returns the maximum size of the field, in bytes</description>
        <label>Byte Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRUDSecurityNotes__c</fullName>
        <description>Notes on CRUD security for the component; usually used only for objects</description>
        <label>CRUD Security Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalculatedFormula__c</fullName>
        <description>The formula specified for this field</description>
        <label>Calculated Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompoundFieldName__c</fullName>
        <label>Compound Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a custom component</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deprecated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeprecationNotes__c</fullName>
        <label>Deprecation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeprecationSuspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecation Suspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DevelopmentNotes__c</fullName>
        <description>To track notes that should not appear in the description.</description>
        <label>Development Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digits__c</fullName>
        <description>The maximum number of digits specified for the field</description>
        <label>Digits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldSecurityNotes__c</fullName>
        <description>Notes for the field level security of this component; only used for Fields</description>
        <label>Field Security Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldTripName__c</fullName>
        <description>Name of the FieldTrip analysis that was run to produce the "Populated On" data</description>
        <inlineHelpText>Name of the FieldTrip analysis that was run to produce the "Populated On" data</inlineHelpText>
        <label>FieldTrip Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <description>The display type of the field</description>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Number</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Long Text Area</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Master-Detail</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Picklist (Multi-Select)</fullName>
                </value>
                <value>
                    <fullName>Rich Text Area</fullName>
                </value>
                <value>
                    <fullName>Roll-Up Summary</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Text (Encrypted)</fullName>
                </value>
                <value>
                    <fullName>Text Area</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <description>The content of the field-level help</description>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a formula field</description>
        <label>Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Why this component is necessary</description>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeyPrefix__c</fullName>
        <description>The three-character prefix code for the object. Record IDs are prefixed with three-character codes that specify the type of the object (for example, accounts have a prefix of 001 and opportunities have a prefix of 006).</description>
        <label>Key Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label of the component</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastBusinessReviewBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Business Review By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DictionaryItemReviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastBusinessReviewDate__c</fullName>
        <description>The datetime that this component was reviewed by the business</description>
        <label>Last Business Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTechnicalReviewBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who performed the last technical review of the component</description>
        <label>Last Technical Review By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DictionaryTechnicalReviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastTechnicalReviewDate__c</fullName>
        <description>The datetime that the component was last reviewed by the technical team</description>
        <label>Last Technical Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>The maximum size of the field for the field in Unicode characters (not bytes) or 40, whichever is less. The maximum value returned by the getLength() method is 40, even if the field’s maximum length is greater than 40.</description>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetadataIdentifier__c</fullName>
        <description>The unique id used to connect this component to SFDC standard metadata</description>
        <externalId>true</externalId>
        <label>Metadata Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NeedsBusinessReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to aid in reporting which components need to be reviewed by the business</description>
        <label>Needs Business Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedsTechnicalReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Technical Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfPublishedChildren__c</fullName>
        <label>Number Of Published Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReferences__c</fullName>
        <label>Number Of References</label>
        <summaryForeignKey>DictionaryItemReference__c.DictionaryItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ParentDictionaryItemAPIName__c</fullName>
        <formula>ParentDictionaryItem__r.APIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Dictionary Item API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDictionaryItemLabel__c</fullName>
        <formula>ParentDictionaryItem__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Dictionary Item Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDictionaryItemMetadataId__c</fullName>
        <formula>ParentDictionaryItem__r.MetadataIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Dictionary Item Metadata Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDictionaryItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent of Dictionary Item (i.e., a Field's Parent Dictionary Item is an Object)</description>
        <label>Parent Dictionary Item</label>
        <referenceTo>DictionaryItem__c</referenceTo>
        <relationshipLabel>Dictionary Items (Parent Dictionary Item)</relationshipLabel>
        <relationshipName>DictionaryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PluralLabel__c</fullName>
        <description>The plural label of the component; used primarily for objects</description>
        <label>Plural Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PopulatedOnPercent__c</fullName>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PopulatedOn__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PopulationLastAnalyzed__c</fullName>
        <label>Population Last Analyzed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Precision__c</fullName>
        <description>The maximum number of digits that can be stored, including all numbers to the left and to the right of the decimal point (but excluding the decimal point character)</description>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrivacyNotes__c</fullName>
        <label>Privacy Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This component is published to the user Data Dictionary</description>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordSecurityNotes__c</fullName>
        <description>Notes about record security of this component; usually only applicable to objects</description>
        <label>Record Security Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceTo__c</fullName>
        <description>The parent object of this field</description>
        <label>Reference To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDXArtifact__c</fullName>
        <description>The artifact to which this component belongs</description>
        <label>SFDX Artifact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <description>The number of digits to the right of the decimal point</description>
        <label>Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DictionaryItemTechnicalOwners</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Data dictionary</description>
    <label>Dictionary Item</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dictionary Items</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Added_Recently_Fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>APIName__c</columns>
        <columns>ParentDictionaryItemAPIName__c</columns>
        <columns>Custom__c</columns>
        <columns>TechnicalOwner__c</columns>
        <columns>BusinessOwner__c</columns>
        <columns>LastTechnicalReviewBy__c</columns>
        <columns>LastTechnicalReviewDate__c</columns>
        <columns>Justification__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DictionaryItem__c.Field</value>
        </filters>
        <label>Added Recently - Fields</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Label__c</columns>
        <columns>FieldType__c</columns>
        <columns>ParentDictionaryItemLabel__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_Objects</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Label__c</columns>
        <columns>APIName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Custom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DictionaryItem__c.Object</value>
        </filters>
        <label>Custom Objects</label>
    </listViews>
    <listViews>
        <fullName>Objects</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Label__c</columns>
        <columns>APIName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DictionaryItem__c.Object</value>
        </filters>
        <label>Objects</label>
    </listViews>
    <listViews>
        <fullName>Recently_Updated_Fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>APIName__c</columns>
        <columns>ParentDictionaryItemAPIName__c</columns>
        <columns>Custom__c</columns>
        <columns>TechnicalOwner__c</columns>
        <columns>BusinessOwner__c</columns>
        <columns>LastTechnicalReviewBy__c</columns>
        <columns>LastTechnicalReviewDate__c</columns>
        <columns>Justification__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DictionaryItem__c.Field</value>
        </filters>
        <label>Recently Updated - Fields</label>
    </listViews>
    <listViews>
        <fullName>Standard_Objects</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Label__c</columns>
        <columns>APIName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Custom__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DictionaryItem__c.Object</value>
        </filters>
        <label>Standard Objects</label>
    </listViews>
    <recordTypes>
        <fullName>Field</fullName>
        <active>true</active>
        <description>Use for Fields</description>
        <label>Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>Object</fullName>
        <active>true</active>
        <description>Use for objects</description>
        <label>Object</label>
    </recordTypes>
    <recordTypes>
        <fullName>PicklistValue</fullName>
        <active>true</active>
        <description>Use for field picklist values</description>
        <label>Picklist Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <description>Use for objects</description>
        <label>Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>CannotUnpublishWithPublishedChildren</fullName>
        <active>true</active>
        <errorConditionFormula>!Publish__c &amp;&amp;  NumberOfPublishedChildren__c  &gt; 0</errorConditionFormula>
        <errorDisplayField>Publish__c</errorDisplayField>
        <errorMessage>This Dictionary Item has published children.  Unpublish them before unpublishing this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParentsMustBePublished</fullName>
        <active>true</active>
        <description>If you try and publish a child item that has a parent (or that parent has a parent) that is not published, do not allow it.</description>
        <errorConditionFormula>AND(Publish__c, OR(
NOT(ParentDictionaryItem__r.ParentDictionaryItem__r.Publish__c),NOT(ParentDictionaryItem__r.Publish__c)))</errorConditionFormula>
        <errorDisplayField>Publish__c</errorDisplayField>
        <errorMessage>In order to publish this item, its parent (and parent's parent) must be published first.</errorMessage>
    </validationRules>
</CustomObject>